--- a/cnn_train.tex
+++ b/cnn_train.tex
@@ -211,7 +211,7 @@ Another visualization of how the neural network is learning is shown in \ref{fig
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/pi_prob.png}
 		\caption{Proton Prob}
-	\label{fig:piprob}
+		\label{fig:pprob}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
@@ -295,19 +295,19 @@ One of the main concerns with training a neural network was that the features th
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_e_acc_tracklength_all.pdf}
 		\caption{Track range versus muon probability for true muons (blue) and true electrons (magenta).}
-		\label{fig:mup_tracklength}
+		\label{fig:mue_tracklength}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_e_acc_tracklength_75.pdf}
 		\caption{Track range $\leq 75$ cm versus muon probability for true muons (blue) and true electrons (magenta).}
-		\label{fig:mup_tracklength75}
+		\label{fig:mue_tracklength75}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_e_acc_momentum.pdf}
 		\caption{Momentum versus muon probability for true muons (blue) and true electrons (magenta).}
-		\label{fig:mup_momentum}
+		\label{fig:mue_momentum}
 	\end{subfigure}
 \caption{Kinematic distributions versus muon probability for true muons and true electrons.}
 \label{fig:mue_kinematics}
@@ -319,19 +319,19 @@ One of the main concerns with training a neural network was that the features th
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_g_acc_tracklength_all.pdf}
 		\caption{Track range versus muon probability for true muons (blue) and true gammas (green).}
-		\label{fig:mup_tracklength}
+		\label{fig:mug_tracklength}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_g_acc_tracklength_75.pdf}
 		\caption{Track range $\leq 75$ cm versus muon probability for true muons (blue) and true gammas (green).}
-		\label{fig:mup_tracklength75}
+		\label{fig:mug_tracklength75}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_g_acc_momentum.pdf}
 		\caption{Momentum versus muon probability for true muons (blue) and true gammas (green).}
-		\label{fig:mup_momentum}
+		\label{fig:mug_momentum}
 	\end{subfigure}
 \caption{Kinematic distributions versus muon probability for true muons and true gammas.}
 \label{fig:mug_kinematics}
