--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,13 @@
 \chapter{Conclusion}
 %\addcontentsline{toc}{chapter}{Conclusion}
-Your Conclusions here.
+Neutrinos, specifically neutrino oscillations, can possibly answer questions beyond the standard model. Using neutrinos to probe physics beyond the standard model however requires a thorough understanding of $\nu-N$ interactions. CC-inclusive cross-sections allow us to understand these interactions as well as help in reconstructing initial neutrino energies which is needed for neutrino oscillation studies. MicroBooNE will be the first $\nu-Ar$ cross-section measurement in the 1 GeV range, where CCQE interactions dominate. The work done in this thesis was to improve the existing cc-inclusive event selection to encompass as much of the $E_{\nu}$ spectra in the 1 GeV range that MicroBooNE sees. 
+
+A review of neutrinos, neutrino oscillations, and neutrino interactions was discussed as well as LArTPCs, specifically MicroBooNE. A description of the first analysis using MicroBooNE data was then outlined. The neutrino ID analysis was the first time automated reconstruction was used on LArTPC data to find neutrino events. The reconstruction was tuned using BNB+Cosmic events and similar topological cuts were then used to build a cc-inclusive selection filter for use in finding cc-inclusive events for the cross-section measurement. The cc-inclusive selection filter to date was then described in detail as well as the efficiency and purity.  
+
+A background of convolutional neural networks was discussed as well as the hardware frameworks and CNN architectures used for training. The image making scheme used in this analysis was described in detail and results of multiple CNN trainings were outlined. CNNs were then used to search for cc-inclusive events in MC and data and the results of this search were described. 
+
+This analysis was successful in training a convolutional neural network on LArTPC data. This alone is pioneering in the field of high energy physics. The analysis was also successful in using a single generated particle trained CNN to classify BNB+Cosmic MC and data events. Successes also include improving both efficiency and purity of all previous cc-inclusive selection filters without affecting truth kinematic distributions. 
+
+Lastly, the analysis was successful in using CNNs for $\mu/\pi$ separation, reducing the NC background, as well as recovering cc-inclusive events below the previously imposed 75 cm track range cut. By removing the 75 cm track range cut, we allow for improvements to the cc-inclusive cross-section measurement MicroBooNE can measure, especially with the increase in CCQE events that can lead to more precise CCQE cross-section measurements that can then help the neutrino oscillation measurement on MicroBooNE. An understanding of the irreducible backgrounds in the CNN100000 selection (specifically cosmics), the MC/Data difference and the statistical and systematic errors are still left to do before a cc-inclusive cross-section in MicroBooNE is finished, however, large strides were made in this analysis to improve the selection.  
+
+
