--- a/example.bib
+++ b/example.bib
@@ -1,6 +1,6 @@
 %% Obtained via the getNewBibTeX script and the SPIRES biblio service
 
-@Article{Phys.Rev.Lett.19.1264,
+@inproceedings{Phys.Rev.Lett.19.1264,
      author    = "Weinberg, Steven",
      title     = "A MODEL OF LEPTONS",
      journal   = "Phys. Rev. Lett.",
@@ -10,7 +10,7 @@
      SLACcitation  = "%%CITATION = PRLTA,19,1264;%%"
 }
 
-@Article{Phys.Rev.D2.1285,
+@inproceedings{Phys.Rev.D2.1285,
      author    = "Glashow, S. L. and Iliopoulos, J. and Maiani, L.",
      title     = "WEAK INTERACTIONS WITH LEPTON - HADRON SYMMETRY",
      journal   = "Phys. Rev.",
@@ -20,7 +20,7 @@
      SLACcitation  = "%%CITATION = PHRVA,D2,1285;%%"
 }
 
-@Article{hep-ph/0410370,
+@inproceedings{hep-ph/0410370,
      author    = "Willenbrock, Scott",
      title     = "Symmetries of the standard model",
      year      = "2004",
@@ -28,7 +28,7 @@
      SLACcitation  = "%%CITATION = HEP-PH 0410370;%%"
 }
 
-@Article{Brianti:2004qq,
+@inproceedings{Brianti:2004qq,
      author    = "Brianti, G.",
      title     = "The Large Hadron Collider project: Historical account",
      journal   = "Phys. Rept.",
@@ -37,68 +37,547 @@
      pages     = "349-364",
      SLACcitation  = "%%CITATION = PRPLC,403-404,349;%%"
 }
+\bibitem{ccinclusive}MicroBooNe-Public-Note-1010 (2016) 
+@article{icarus_t600,
+      author         = "Antonello, M. and others",
+      title          = "{ICARUS at FNAL}",
+      year           = "2013",
+      eprint         = "1312.7252",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1312.7252;%%"
+}
+@inproceedings{sbnd,
+      author         = "Adams, C. and others",
+      title          = "{LAr1-ND: Testing Neutrino Anomalies with Multiple LArTPC
+                        Detectors at Fermilab}",
+      booktitle      = "{Proceedings, 2013 Community Summer Study on the Future
+                        of U.S. Particle Physics: Snowmass on the Mississippi
+                        (CSS2013): Minneapolis, MN, USA, July 29-August 6, 2013}",
+      collaboration  = "LArTPC",
+      url            = "http://inspirehep.net/record/1256028/files/arXiv:1309.7987.pdf",
+      year           = "2013",
+      eprint         = "1309.7987",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1309.7987;%%"
+}
+@article{sbn,
+     author    = "R.Acciari et al.",
+     title     = "A Proposal for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam",
+ collaboration = "MicroBooNE",
+     note      = "arXiv:1503.01520",
+     year      = "2015"
+}
 
-@Article{Amato:1998xt,
+@article{Amato:1998xt,
      author    = "Amato, S. and others",
- collaboration = "LHCb",
      title     = "LHCb technical proposal",
+ collaboration = "LHCb",
      note     = "CERN-LHCC-98-4"
 }
 
-@Article{dune,
+@article{dune,
      author    = "Acciari, R. et al.",
- collaboration = "The MicroBooNE Collaboration",
      title     = "Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE)",
      note      = "arXiv:1512.06148",
+ collaboration = "MicroBooNE",
      year      = "2015",
 }
 
-@Article{noisechar,
+@article{noisechar,
      author    = "Acciari, R. et al.",
- collaboration = "The MicroBooNE Collaboration",
      title     = "Noise Characterization and Filtering in the MicroBooNE Liquid Argon TPC",
      note      = "arXiv:1705.07341",
+ collaboration = "MicroBooNE",
      year      = "2016",
 }
-@Article{michel,
+@article{michel,
      author    = "Acciari, R. et al.",
- collaboration = "The MicroBooNE Collaboration",
      title     = "Michel Electron Reconstruction Using Cosmic Ray Data from the MicroBooNE LArTPC",
      note      = "arXiv:1704.02927",
+ collaboration = "MicroBooNE",
      year      = "2017",
 }
-@Article{microboone,
+@article{microboone,
      author    = "Acciari, R. et al.",
- collaboration = "The MicroBooNE Collaboration",
      title     = "Design and Construction of the MicroBooNE Detector",
      journal   = "JINST",
      volume    = "12",
+ collaboration = "MicroBooNE",
      year      = "2017",
 }
-@Article{miniboone,
+@article{miniboone,
      author    = "Acciari, R. et al.",
- collaboration = "The MicroBooNE Collaboration",
      title     = "Unexplained Excess of Electronlike Events from a 1-GeV Neutrino Beam",
      journal   = "Phys. Rev.",
      volume    = "102",
+ collaboration = "MiniBooNE",
      year      = "2009",
      pages     = "101802",
 }
-@Misc{neutrino,
-author = {Wikipedia},
-title = {Neutrino},
-howpublished = {\url{http://wikipedia.org/wiki/Neutrino}},
-year = {2013},
+
+@article{solarmodel,
+  author={S Turck-Chièze},
+  title={The Standard Solar Model and beyond},
+  journal={Journal of Physics: Conference Series},
+  volume={665},
+  number={1},
+  pages={012078},
+  url={http://stacks.iop.org/1742-6596/665/i=1/a=012078},
+  year={2016}
+}
+@article{pauli,
+      author         = "Pauli, W.",
+      title          = "{Dear radioactive ladies and gentlemen}",
+      journal        = "Phys. Today",
+      volume         = "31N9",
+      year           = "1978",
+      pages          = "27",
+      SLACcitation   = "%%CITATION = PHTOA,31N9,27;%%"
+}
+@article{chadwick,
+      author         = "Chadwick, J.",
+      title          = "{Possible Existence of a Neutron}",
+      journal        = "Nature",
+      volume         = "129",
+      year           = "1932",
+      pages          = "312",
+      doi            = "10.1038/129312a0",
+      SLACcitation   = "%%CITATION = NATUA,129,312;%%"
+}
+@article{fermi,
+      author         = "Fermi, E.",
+      title          = "{Trends to a Theory of beta Radiation. (In Italian)}",
+      booktitle      = "{Meeting of the Italian School of Physics and Weak
+                        Interactions Bologna, Italy, April 26-28, 1984}",
+      journal        = "Nuovo Cim.",
+      volume         = "11",
+      year           = "1934",
+      pages          = "1-19",
+      doi            = "10.1007/BF02959820",
+      note           = "[,535(1934)]",
+      SLACcitation   = "%%CITATION = NUCIA,11,1;%%"
+}
+@article{cowan1,
+      author         = "Reines, F. and Cowan, C. L.",
+      title          = "{Detection of the free neutrino}",
+      journal        = "Phys. Rev.",
+      volume         = "92",
+      year           = "1953",
+      pages          = "830-831",
+      doi            = "10.1103/PhysRev.92.830",
+      SLACcitation   = "%%CITATION = PHRVA,92,830;%%"
+}
+@article{cowan2,
+      author         = "Cowan, C. L. and Reines, F. and Harrison, F. B. and
+                        Kruse, H. W. and McGuire, A. D.",
+      title          = "{Detection of the free neutrino: A Confirmation}",
+      journal        = "Science",
+      volume         = "124",
+      year           = "1956",
+      pages          = "103-104",
+      doi            = "10.1126/science.124.3212.103",
+      SLACcitation   = "%%CITATION = SCIEA,124,103;%%"
+}
+@article{leonlederman,
+      author         = "Danby, G. and Gaillard, J. M. and Goulianos, Konstantin
+                        A. and Lederman, L. M. and Mistry, Nari B. and Schwartz,
+                        M. and Steinberger, J.",
+      title          = "{Observation of High-Energy Neutrino Reactions and the
+                        Existence of Two Kinds of Neutrinos}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "9",
+      year           = "1962",
+      pages          = "36-44",
+      doi            = "10.1103/PhysRevLett.9.36",
+      SLACcitation   = "%%CITATION = PRLTA,9,36;%%"
+}
+@article{donut,
+      author         = "Kodama, K. and others",
+      title          = "{Observation of tau neutrino interactions}",
+      collaboration  = "DONUT",
+      journal        = "Phys. Lett.",
+      volume         = "B504",
+      year           = "2001",
+      pages          = "218-224",
+      doi            = "10.1016/S0370-2693(01)00307-0",
+      eprint         = "hep-ex/0012035",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-00-335-E",
+      SLACcitation   = "%%CITATION = HEP-EX/0012035;%%"
+}
+@article{bahcall1,
+      author         = "Bahcall, John N. and Davis, Jr., Raymond",
+      title          = "{An Account of the development of the Solar Neutrino Problem}",
+      year           = "1981",
+      reportNumber   = "PRINT-81-0484 (IAS,PRINCETON)",
+      SLACcitation   = "%%CITATION = PRINT-81-0484 (IAS,PRINCETON);%%"
+}
+@article{bahcall2,
+      author         = "Bahcall, John N.",
+      title          = "{Solar neutrinos. I: Theoretical}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "12",
+      year           = "1964",
+      pages          = "300-302",
+      doi            = "10.1103/PhysRevLett.12.300",
+      SLACcitation   = "%%CITATION = PRLTA,12,300;%%"
+}
+@article{neutrinooscillation1,
+      author         = "Wolfenstein, L.",
+      title          = "{Neutrino Oscillations in Matter}",
+      journal        = "Phys. Rev.",
+      volume         = "D17",
+      year           = "1978",
+      pages          = "2369-2374",
+      doi            = "10.1103/PhysRevD.17.2369",
+      reportNumber   = "COO-3066-102",
+      SLACcitation   = "%%CITATION = PHRVA,D17,2369;%%"
+}
+@article{neutrinooscillation2,
+      author         = "Wolfenstein, L.",
+      title          = "{Neutrino Oscillations and Stellar Collapse}",
+      journal        = "Phys. Rev.",
+      volume         = "D20",
+      year           = "1979",
+      pages          = "2634-2635",
+      doi            = "10.1103/PhysRevD.20.2634",
+      reportNumber   = "COO-3066-133",
+      SLACcitation   = "%%CITATION = PHRVA,D20,2634;%%"
+}
+@article{neutrinooscillation3,
+      author         = "Mikheev, S. P. and Smirnov, A. {\relax Yu}.",
+      title          = "{Resonance Amplification of Oscillations in Matter and
+                        Spectroscopy of Solar Neutrinos}",
+      journal        = "Sov. J. Nucl. Phys.",
+      volume         = "42",
+      year           = "1985",
+      pages          = "913-917",
+      note           = "[Yad. Fiz.42,1441(1985)]",
+      SLACcitation   = "%%CITATION = SJNCA,42,913;%%"
+}
+@article{neutrinooscillation4,
+      author         = "Mikheev, S. P. and Smirnov, A. {\relax Yu}.",
+      title          = "{Neutrino Oscillations in a Variable Density Medium and
+                        Neutrino Bursts Due to the Gravitational Collapse of
+                        Stars}",
+      journal        = "Sov. Phys. JETP",
+      volume         = "64",
+      year           = "1986",
+      pages          = "4-7",
+      note           = "[Zh. Eksp. Teor. Fiz.91,7(1986)]",
+      eprint         = "0706.0454",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0706.0454;%%"
+}
+@article{raydavis,
+      author         = "Davis, R.",
+      title          = "{Solar neutrinos. II: Experimental}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "12",
+      year           = "1964",
+      pages          = "303-305",
+      doi            = "10.1103/PhysRevLett.12.303",
+      SLACcitation   = "%%CITATION = PRLTA,12,303;%%"
+}
+@article{kamiokande,
+      author         = "Fukuda, Y. and others",
+      title          = "{Evidence for oscillation of atmospheric neutrinos}",
+      collaboration  = "Super-Kamiokande",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "81",
+      year           = "1998",
+      pages          = "1562-1567",
+      doi            = "10.1103/PhysRevLett.81.1562",
+      eprint         = "hep-ex/9807003",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "BU-98-17, ICRR-REPORT-422-98-18, UCI-98-8,
+                        KEK-PREPRINT-98-95, LSU-HEPA-5-98, UMD-98-003, SBHEP-98-5,
+                        TKU-PAP-98-06, TIT-HPE-98-09",
+      SLACcitation   = "%%CITATION = HEP-EX/9807003;%%"
+}
+@article{superk,
+      author         = "Fukuda, Y. and others",
+      title          = "{Evidence for oscillation of atmospheric neutrinos}",
+      collaboration  = "Super-Kamiokande",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "81",
+      year           = "1998",
+      pages          = "1562-1567",
+      doi            = "10.1103/PhysRevLett.81.1562",
+      eprint         = "hep-ex/9807003",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "BU-98-17, ICRR-REPORT-422-98-18, UCI-98-8,
+                        KEK-PREPRINT-98-95, LSU-HEPA-5-98, UMD-98-003, SBHEP-98-5,
+                        TKU-PAP-98-06, TIT-HPE-98-09",
+      SLACcitation   = "%%CITATION = HEP-EX/9807003;%%"
+}
+@article{pontecorvo,
+      author         = "Pontecorvo, B.",
+      title          = "{Mesonium and anti-mesonium}",
+      journal        = "Sov. Phys. JETP",
+      volume         = "6",
+      year           = "1957",
+      pages          = "429",
+      note           = "[Zh. Eksp. Teor. Fiz.33,549(1957)]",
+      SLACcitation   = "%%CITATION = SPHJA,6,429;%%"
+}
+@article{pdg,
+      author         = "Olive, K. A. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C38",
+      year           = "2014",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%"
+}
+@book{griffiths,
+      author        = "Griffiths, David J",
+      title         = "{Introduction to elementary particles}",
+      publisher     = "Wiley",
+      address       = "New York, NY",
+      series        = "Physics textbook",
+      year          = "2008",
+      url           = "https://cds.cern.ch/record/111880",
+}
+@article{zellar,
+      author         = "Formaggio, J. A. and Zeller, G. P.",
+      title          = "{From eV to EeV: Neutrino Cross Sections Across Energy
+                        Scales}",
+      journal        = "Rev. Mod. Phys.",
+      volume         = "84",
+      year           = "2012",
+      pages          = "1307-1341",
+      doi            = "10.1103/RevModPhys.84.1307",
+      eprint         = "1305.7513",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-12-785-E",
+      SLACcitation   = "%%CITATION = ARXIV:1305.7513;%%"
+}
+@article{miniboone1,
+      author         = "Aguilar-Arevalo, A. A. and others",
+      title          = "{A Combined $\nu_\mu \rightarrow \nu_e$ and $\bar \nu_\mu
+                        \rightarrow \bar \nu_e$ Oscillation Analysis of the
+                        MiniBooNE Excesses}",
+      collaboration  = "MiniBooNE",
+      url            = "http://lss.fnal.gov/archive/2012/pub/fermilab-pub-12-394-ad-ppd.pdf",
+      year           = "2012",
+      eprint         = "1207.4809",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-12-394-AD-PPD, LA-UR-12-23041",
+      SLACcitation   = "%%CITATION = ARXIV:1207.4809;%%"
+}
+@article{miniboone2,
+      author         = "Aguilar-Arevalo, A. A. and others",
+      title          = "{Event Excess in the MiniBooNE Search for $\bar \nu_\mu
+                        \rightarrow \bar \nu_e$ Oscillations}",
+      collaboration  = "MiniBooNE",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "105",
+      year           = "2010",
+      pages          = "181801",
+      doi            = "10.1103/PhysRevLett.105.181801",
+      eprint         = "1007.1150",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-10-225-E, LA-UR-10-04610",
+      SLACcitation   = "%%CITATION = ARXIV:1007.1150;%%"
+}
+@article{nygren,
+      author         = "Nygren, D. R.",
+      title          = "{The Time Projection Chamber: A New 4 pi Detector for
+                        Charged Particles}",
+      booktitle      = "{1974 PEP summer study}",
+      journal        = "eConf",
+      volume         = "C740805",
+      year           = "1974",
+      pages          = "58",
+      reportNumber   = "PEP-0144",
+      SLACcitation   = "%%CITATION = ECONF,C740805,58;%%"
+}
+@article{rubbia,
+      author         = "Rubbia, C.",
+      title          = "{The Liquid Argon Time Projection Chamber: A New Concept
+                        for Neutrino Detectors}",
+      year           = "1977",
+      reportNumber   = "CERN-EP-INT-77-08",
+      SLACcitation   = "%%CITATION = CERN-EP-INT-77-08;%%"
+}
+@article{icarus,
+      author         = "Amerio, S. and others",
+      title          = "{Design, construction and tests of the ICARUS T600
+                        detector}",
+      collaboration  = "ICARUS",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A527",
+      year           = "2004",
+      pages          = "329-410",
+      doi            = "10.1016/j.nima.2004.02.044",
+      SLACcitation   = "%%CITATION = NUIMA,A527,329;%%"
+}
+@article{lartpc_cosmic,
+      author         = "Arneodo, F. and others",
+      title          = "{First observation of 140-cm drift ionizing tracks in the
+                        ICARUS liquid-argon TPC}",
+      collaboration  = "ICARUS",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A449",
+      year           = "2000",
+      pages          = "36-41",
+      doi            = "10.1016/S0168-9002(99)01296-6",
+      SLACcitation   = "%%CITATION = NUIMA,A449,36;%%"
+}
+@article{lartpc_solar,
+      author         = "Palamara, O.",
+      title          = "{The atmospheric and solar neutrino experiment with the
+                        ICARUS T600 detector}",
+      booktitle      = "{Proceedings,  7th International Workshop on Topics in
+                        Astroparticle and Underground Physics (TAUP 2001): Gran
+                        Sasso, Assergi, L'Aquila, Italy, September 8-12, 2001}",
+      collaboration  = "ICARUS",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "110",
+      year           = "2002",
+      pages          = "329-332",
+      doi            = "10.1016/S0920-5632(02)01500-1",
+      SLACcitation   = "%%CITATION = NUPHZ,110,329;%%"
+}
+@article{lartpc_accelerator,
+      author         = "Antonello, M. and others",
+      title          = "{Search for anomalies in the ${\nu}_e$ appearance from a
+                        ${\nu}_{\mu}$ beam}",
+      collaboration  = "ICARUS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C73",
+      year           = "2013",
+      pages          = "2599",
+      doi            = "10.1140/epjc/s10052-013-2599-z",
+      eprint         = "1307.4699",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1307.4699;%%"
+}
+@article{argoneut1,
+      author         = "Acciarri, R. and others",
+      title          = "{First Measurement of Neutrino and Antineutrino Coherent
+                        Charged Pion Production on Argon}",
+      collaboration  = "ArgoNeuT",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "113",
+      year           = "2014",
+      number         = "26",
+      pages          = "261801",
+      doi            = "10.1103/PhysRevLett.113.261801,
+                        10.1103/PhysRevLett.114.039901",
+      note           = "[erratum: Phys. Rev. Lett.114,no.3,039901(2015)]",
+      eprint         = "1408.0598",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-14-258-E",
+      SLACcitation   = "%%CITATION = ARXIV:1408.0598;%%"
+}
+@article{argoneut2,
+      author         = "Acciarri, R. and others",
+      title          = "{Detection of Back-to-Back Proton Pairs in
+                        Charged-Current Neutrino Interactions with the ArgoNeuT
+                        Detector in the NuMI Low Energy Beam Line}",
+      collaboration  = "ArgoNeuT",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      number         = "1",
+      pages          = "012008",
+      doi            = "10.1103/PhysRevD.90.012008",
+      eprint         = "1405.4261",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "FERMILAB-PUB-14-615-E",
+      SLACcitation   = "%%CITATION = ARXIV:1405.4261;%%"
+}
+@article{argoneut3,
+      author         = "Acciarri, R. and others",
+      title          = "{Measurements of Inclusive Muon Neutrino and Antineutrino
+                        Charged Current Differential Cross Sections on Argon in
+                        the NuMI Antineutrino Beam}",
+      collaboration  = "ArgoNeuT",
+      journal        = "Phys. Rev.",
+      volume         = "D89",
+      year           = "2014",
+      number         = "11",
+      pages          = "112003",
+      doi            = "10.1103/PhysRevD.89.112003",
+      eprint         = "1404.4809",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-14-104-E",
+      SLACcitation   = "%%CITATION = ARXIV:1404.4809;%%"
+}
+@article{argoneut4,
+      author         = "Anderson, C. and others",
+      title          = "{First Measurements of Inclusive Muon Neutrino Charged
+                        Current Differential Cross Sections on Argon}",
+      collaboration  = "ArgoNeuT",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "108",
+      year           = "2012",
+      pages          = "161802",
+      doi            = "10.1103/PhysRevLett.108.161802",
+      eprint         = "1111.0103",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-11-591-PPD",
+      SLACcitation   = "%%CITATION = ARXIV:1111.0103;%%"
+}
+@article{argoneut5,
+      author         = "Acciarri, R. and others",
+      title          = "{First Observation of Low Energy Electron Neutrinos in a
+                        Liquid Argon Time Projection Chamber}",
+      collaboration  = "ArgoNeuT",
+      journal        = "Phys. Rev.",
+      volume         = "D95",
+      year           = "2017",
+      number         = "7",
+      pages          = "072005",
+      doi            = "10.1103/PhysRevD.95.072005",
+      note           = "[Phys. Rev.D95,072005(2017)]",
+      eprint         = "1610.04102",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-16-466-ND",
+      SLACcitation   = "%%CITATION = ARXIV:1610.04102;%%"
+}
+@article{ILSVRC15,
+Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
+Title = {{ImageNet Large Scale Visual Recognition Challenge}},
+Year = {2015},
+journal   = {International Journal of Computer Vision (IJCV)},
+doi = {10.1007/s11263-015-0816-y},
+volume={115},
+number={3},
+pages={211-252}
 }
 
-@Misc{historyneutrino,
-author = {Dave Casper},
-title = {What's a Neutrino},
-howpublished = {\url{http://www.ps.uci.edu/~superk/neutrino.html}},
-year = {2013},
+@article{hubel,
+  author = {Hubel, D. and Wiesel, T.},
+  journal = {Journal of Physiology},
+  pages = {106-154},
+  title = {Receptive fields, binocular interaction, and functional architecture in the cat's visual cortex},
+  volume = 160,
+  year = 1962
 }
 
-@ARTICLE{2008PhR...460....1G,
+
+
+@article{2008PhR...460....1G,
    author = {{Gonzalez-Garcia}, M.~C. and {Maltoni}, M.},
     title = "{Phenomenology with massive neutrinos}",
   journal = {\physrep},
@@ -114,20 +593,95 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@Misc{neutrinooscillation,
+@inproceedings{optimization,
+  author = {Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P.},
+  booktitle = {NIPS},
+  editor = {Bartlett, Peter L. and Pereira, Fernando C. N. and Burges, Christopher J. C. and Bottou, Léon and Weinberger, Kilian Q.},
+  pages = {2960-2968},
+  title = {Practical Bayesian Optimization of Machine Learning Algorithms.},
+  year = 2012
+}
+@incollection{alexnet,
+title = {ImageNet Classification with Deep Convolutional Neural Networks},
+author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+@article{googlenet,
+  author    = {Christian Szegedy and
+               Wei Liu and
+               Yangqing Jia and
+               Pierre Sermanet and
+               Scott E. Reed and
+               Dragomir Anguelov and
+               Dumitru Erhan and
+               Vincent Vanhoucke and
+               Andrew Rabinovich},
+  title     = {Going Deeper with Convolutions},
+  journal   = {CoRR},
+  volume    = {abs/1409.4842},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.4842},
+  archivePrefix = {arXiv},
+  eprint    = {1409.4842},
+  timestamp = {Wed, 07 Jun 2017 14:40:42 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/SzegedyLJSRAEVR14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@article{caffe,
+  Author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
+  Journal = {arXiv preprint arXiv:1408.5093},
+  Title = {Caffe: Convolutional Architecture for Fast Feature Embedding},
+  Year = {2014}
+}
+
+@article{tsne,
+  author = {van der Maaten, Laurens and Hinton, Geoffrey},
+  journal = {Journal of Machine Learning Research},
+  keywords = {dimensionality_reduction tSNE visualization},
+  pages = {2579-2605},
+  title = {Visualizing Data using {t-SNE} },
+  url = {http://www.jmlr.org/papers/v9/vandermaaten08a.html},
+  volume = 9,
+  year = 2008
+}
+@techreport{cc-inclusive,
+collaboration = {MicroBooNE},
+title = {Selection and kinematic properties of $\nu_{\mu}$ charged-current inclusive events in $5 x 10^{19}$ POT of MicroBooNE data},
+author    = "Acciari, R. et al.",
+number = {MICROBOONE-NOTE-1010-PUB},
+month = {July},
+year = {2016}
+}
+@techreport{neutrinoid,
+collaboration = {MicroBooNE},
+title = {First neutrino interactions observed with the MicroBooNE Liquid-Argon TPC detector},
+author    = "Acciari, R. et al.",
+number = {MICROBOONE-NOTE-1002-PUB},
+month = {November},
+year = {2015}
+}
+
+
+
+%@Misc{neutrinooscillation,
 author = {Wikipedia},
 title = {Neutrino Oscillation},
 howpublished = {\url{http://en.wikipedia.org/wiki/Neutrino_oscillation}},
 year = {2013},
 }
 
-@Misc{fnal,
+%@Misc{fnal,
 author = {Karsten Heeger},
 title = {Big World of Small Neutrinos},
 howpublished = {\url{http://conferences.fnal.gov/lp2003/forthepublic/neutrinos/}},
 }
 
-@Misc{bnl,
+%@Misc{bnl,
 author = {Brooknaven National Laboratory},
 title = {Neutrinos and Nuclear Chemistry},
 howpublished = {\url{http://www.chemistry.bnl.gov/sciandtech/sn/default.htm}},
@@ -145,12 +699,12 @@ year = {2010},
       SLACcitation   = "%%CITATION = HEP-PH/0305106;%%",
 }
  
-@Misc{atmos,
+%@Misc{atmos,
 title = {Neutrino Oscillations},
 howpublished = {\url{http://www2.warwick.ac.uk/fac/sci/physics/current/teach/module_home/px435/lec_oscillations.pdf}},
 year = {2012},
 }
-@Misc{prob,
+%@Misc{prob,
 author = {Darrel Smith},
 title = {Calculating the Probability for Neutrino Oscillations},
 howpublished = {\url{http://physicsx.pr.erau.edu/Office/oscillations.pdf}},
