--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -10,7 +10,8 @@ The purpose of this thesis was to use Convolutional Neural Networks (CNN) to sep
 \let\cleardoublepage\clearpage
 %% Declaration
 \begin{declaration}
-  I dedicate this dissertation to the two important women in my life; My wife and my mom. Both have been there cheering me on giving me strength and love as I worked towards the hardest accomplishment I've ever done.  
+  I dedicate this dissertation to the two most important women in my life; my mom and my wife. Mom, you taught me how to stand up for myself, how to trust in my abilities, and that hard work always pays off. Em, you've been and continue to be my rock, steadying me as I questioned whether or not I could do this, loving me through all the late nights and keeping me sane. Both have been there cheering me on giving me strength and love as I worked towards the hardest thing I've ever accomplished.  
+
   \vspace*{1cm}
   \begin{flushright}
     Jessica Nicole Esquivel 
@@ -35,7 +36,7 @@ The purpose of this thesis was to use Convolutional Neural Networks (CNN) to sep
 %% Acknowledgements
 \begin{acknowledgements}
   Of the many people who deserve thanks, some are particularly prominent,
-  such as my supervisor\dots
+  such as my advisor Mitch Soderberg who took a chance on me and supported me even though I struggled through the courses. Katherine, thanks for always lending an ear to bounce off ideas, answering all my questions and for being my best friend. Duncan Brown, thank you for seeing that there was potential in me and for helping me get through the hurdle that was Quals. Fabian, thank you for studying for the Quals with me. Without your infectious optimism I wouldn't have made it. Lastly, thank you Jedidah Isler for showing me that it is possible for a woman of color to succeed in this field and for taking a vested interest in my success.     
 \end{acknowledgements}
 
 
