--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -7,42 +7,42 @@ Neutrinos are fundamental particles which help make up the universe. They are al
 As previously stated, neutrinos are very weakly interacting; in fact, neutrinos can pass unscathed through a wall of lead several hundred light-years thick. Because neutrinos interact so rarely, studying neutrinos requires a massive detector and a powerful neutrino source. With that being said, we can only ``see'' a neutrino when they interact in a detector. In a collision, distinct charged particles are produced with each type of neutrino because of the weak force. An electron neutrino will create an electron, a muon neutrino will create a muon, and a tau neutrino will create a tau. The charged lepton track the particle leaves in the detector is how one figures out what type of neutrino interaction was ``seen''. Liquid Argon Time Projection Chambers are being used to study neutrinos due to their excellent imaging and particle identification capabilities. 
 
 \section{History of Neutrinos}
-The neutrino was first postulated by Wolfgang Pauli in 1930 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in italian) in 1933 to fix this confusion. 
+The neutrino was first postulated by Wolfgang Pauli in 1930 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay \cite{pauli}. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron \cite{chadwick}, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in italian) in 1933 to fix this confusion. 
 
-Fermi's paper, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1956 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
+Fermi's paper \cite{fermi}, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1956 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino \cite{cowan1}\cite{cowan2}. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
 
 In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino \cite{leonlederman}. The trio received the 1988 Nobel Prize in Physics for their discovery of the muon neutrino. The experiment used a beam of energetic protons from Brookhaven's Alternating Gradient Synchrotron (AGS) to produce a shower of pions. These pions would then travel 70 ft. toward a 5,000 ton steel wall. The pions then decayed into muons and neutrinos, the neutrinos being the only particle making it through. These neutrinos would enter a neon-filled detector producing muon spark trails that were detected and photographed, proving the existence of muon neutrinos. The experiment's use of the first ever neutrino beam was pioneering work that scientists around the world still use today.  
 
-The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab. The scientists used the Tevatron to produce an intense neutrino beam. The neutrinos then passed through layers of nuclear emulsion. When a neutrino interaction would occur, charged particles would leave visible tracks in the emulsion. 
+The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab \cite{donut}.The scientists used the Tevatron to produce an intense neutrino beam. The neutrinos then passed through layers of nuclear emulsion. When a neutrino interaction would occur, charged particles would leave visible tracks in the emulsion. 
 
 \subsection{Solar Oscillations and the Solar Neutrino Problem}
 
-In the late 1960s, it was found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass.\cite{neutrino}
+In the late 1960s, it was found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem \cite{bahcall1} and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass \cite{neutrinooscillation1}-\cite{neutrinooscillation4}.
 
-The standard solar model (SSM) is a mathematical model developed by John Bahcall of the sun as a spherical ball of gas with varying states of ionization.The solar neutrino flux derived from the SSM is shown in figure \ref{fig:solarmodel} \cite{bahcall}. Nuclear fusion and decay processes produce an abundant amount of neutrinos. The standard solar model predicts that these reactions produce several groups of neutrinos, each with differing fluxes and energy spectra. The figure also shows the ranges of detection of existing solar neutrino experiments in different shades of blue to illustrate that they sample different portions of the solar neutrino energy spectrum. Three of these experiments are discussed below.
+The standard solar model (SSM) is a mathematical model developed by John Bahcall of the sun as a spherical ball of gas with varying states of ionization.The solar neutrino flux derived from the SSM is shown in figure \ref{fig:solarmodel} \cite{bahcall2}. Nuclear fusion and decay processes produce an abundant amount of neutrinos. The standard solar model predicts that these reactions produce several groups of neutrinos, each with differing fluxes and energy spectra. The figure also shows the ranges of detection of existing solar neutrino experiments in different shades of blue to illustrate that they sample different portions of the solar neutrino energy spectrum. Three of these experiments are discussed below.
 
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=.55]{figs/solarmodel.jpg}
-\captionof{figure}{The Standard Solar Model \cite{bahcall}}
+\captionof{figure}{The Standard Solar Model \cite{bahcall2}}
 \label{fig:solarmodel}
 \end{figure}
 
-The first experiment to detect the effects of neutrino oscillation was the Ray Davis's Homestake Experiment. The detector was stationed in the Homestake Gold Mine in Lead, South Dakota. It was 1,478 meters underground and was 380 $\text{m}^3$. The detector was filled with perchloroethylene. Perchloroethylene was chosen because of its high concentrations of chlorine. When an $\nu_{e}$ interacted with a chlorine-37 atom, the atom would transform to argon-37 which was then extracted and counted. The neutrino capture reaction is shown in equation \ref{eq:capture}. Davis observed a deficit of about $1/3$ the flux of solar neutrinos that was predicted by Bahcall's Standard Solar Model. The unexplained difference between the measured solar neutrino flux and model predictions led to the Solar Neutrino Problem.\cite{fnal}
+The first experiment to detect the effects of neutrino oscillation was the Ray Davis's Homestake Experiment \cite{raydavis}. The detector was stationed in the Homestake Gold Mine in Lead, South Dakota. It was 1,478 meters underground and was 380 $\text{m}^3$. The detector was filled with perchloroethylene. Perchloroethylene was chosen because of its high concentrations of chlorine. When an $\nu_{e}$ interacted with a chlorine-37 atom, the atom would transform to argon-37 which was then extracted and counted. The neutrino capture reaction is shown in equation \ref{eq:capture}. Davis observed a deficit of about $1/3$ the flux of solar neutrinos that was predicted by Bahcall's Standard Solar Model. The unexplained difference between the measured solar neutrino flux and model predictions led to the Solar Neutrino Problem.
 
 \begin{equation}
 \label{eq:capture}
 \nu_{e} +{}^{37}Cl \rightarrow {}^{37}Ar + e^{-}
 \end{equation}
 
-While it is now known that the Homestake Experiment results were indicating neutrino flavor oscillation, some physicists were weary of the results. Conclusive evidence of the Solar Neutrino Problem was provided by the Kamiokande-II experiment, a water cherenkov detector with a low enough energy threshold to detect neutrinos through neutrino-electron elastic scattering. In the elastic scattering interaction the electrons coming out of the point of reaction strongly point in the direction that the neutrino was traveling, away from the sun. While the neutrinos observed in Kamiokande-II were clearly from the sun, there was still a discrepancy between Kamiokande-II and Homestake; The Kamiokande-II experiment measured about 1/2 the predicted flux, rather than the 1/3 that the Homestake Experiment saw.
+While it is now known that the Homestake Experiment results were indicating neutrino flavor oscillation, some physicists were weary of the results. Conclusive evidence of the Solar Neutrino Problem was provided by the Kamiokande-II experiment \cite{kamiokande}, a water cherenkov detector with a low enough energy threshold to detect neutrinos through neutrino-electron elastic scattering. In the elastic scattering interaction the electrons coming out of the point of reaction strongly point in the direction that the neutrino was traveling, away from the sun. While the neutrinos observed in Kamiokande-II were clearly from the sun, there was still a discrepancy between Kamiokande-II and Homestake; The Kamiokande-II experiment measured about 1/2 the predicted flux, rather than the 1/3 that the Homestake Experiment saw.
 
 The solution to the solar neutrino problem was finally experimentally determined by the Sudbury Neutrino Observatory(SNO). The Ray Davis's Homestake Experiment was only sensitive to electron neutrinos, and the Kamiokande-II Experiment was dominated by the electron neutrino signal. The SNO experiment had the capability to see all three neutrino flavors. Because of this, it was possible to measure the electron neutrinos and total neutrino flux. The experiment demonstrated that the deficit was due to the MSW effect \cite{Smirnov:2003da}, the conversion of electron neutrinos from their pure flavor state into the second neutrino mass eigenstate as they passed through a resonance due to the changing density of the sun. The resonance is energy dependent, and is visible near 2 MeV. The water cherenkov detectors only detect neutrinos above about 5 MeV, while the radiochemical experiments were sensitive to lower energy (0.8 MeV for chlorine, 0.2 MeV for gallium), and this turned out to be the source of the difference in the observed neutrino rates at the two types of experiments. Figure \ref{fig:solarexperiments} shows Homestake, Kamiokande-II and SNO experiments. 
 \begin{figure}[htp]
 \centering
 	\begin{subfigure}[b]{.3\textwidth}
     \includegraphics[width=\textwidth]{figs/homestake.jpg}
-    \caption{Ray Davis's Homestake Experiment \cite{homestake}}
+    \caption{Ray Davis's Homestake Experiment \cite{raydavis}}
     \label{fig:homestake}
     \end{subfigure}
     \quad
@@ -54,7 +54,7 @@ The solution to the solar neutrino problem was finally experimentally determined
     \quad
     \begin{subfigure}[b]{.3\textwidth}
     \includegraphics[width=\textwidth]{figs/sno.jpg}
-    \caption{SNO Experiment \cite{SNO}}
+    \caption{SNO Experiment \cite{Smirnov:2003da}}
     \label{fig:sno}
     \end{subfigure}
 \caption{Solar Neutrino Experiments}
@@ -90,7 +90,7 @@ R = \frac{(\nu_{\mu} + \overline{\nu_{\mu}})}{(\nu_{e} + \overline{\nu_{e}})}
 \end{equation} 
 
 
-There have been two types of detectors used to study atmospheric neutrinos: Water Cherenkov detectors and tracking calorimeters. Super-Kamiokande is the detector we will focus on. These atmospheric detector experiments measure the ratio of $\nu_{\mu}$ to $\nu_{e}$. They also measure the zenith angle distribution of the neutrinos. These experiments report a double ratio (shown in equation \ref{eq:doubleratio}). This double ratio is the ratio measured in the detector to the ratio thats expected which is 2. If the double ratio equals to 1, the data agrees with the prediction. Various measurements from multiple experiments are shown in figure \ref{fig:ratiotable}. Except for Frejus, all R measurements are less than 1. This discrepancy between the predicted R and the measured R became known as the Atmospheric Neutrino Anomaly.
+There have been two types of detectors used to study atmospheric neutrinos: Water Cherenkov detectors and tracking calorimeters. Atmospheric detector experiments measure the ratio of $\nu_{\mu}$ to $\nu_{e}$. They also measure the zenith angle distribution of the neutrinos. These experiments report a double ratio (shown in equation \ref{eq:doubleratio}). This double ratio is the ratio measured in the detector to the ratio thats expected which is 2. If the double ratio equals to 1, the data agrees with the prediction. Various measurements from multiple experiments are shown in figure \ref{fig:ratiotable}. Except for Frejus, all R measurements are less than 1. This discrepancy between the predicted R and the measured R became known as the Atmospheric Neutrino Anomaly \cite{superk}.
 \begin{equation}
 \label{eq:doubleratio}
 R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
@@ -116,8 +116,8 @@ Frejus & Iron Tracking Calorimeter & 1.0 $\pm$ 0.15\\
 Kamiokande-II has the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux will be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavor oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15 km) than coming up from the bottom of the detector(13000 km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $\text{sin}^2(2\theta$). Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so it's fitting to derive this phenomenon mathematically. In the next two sections, two flavor and three flavor neutrino oscillation derivations will be explained. 
 
 
-\section{Neutrino Oscillations}
-Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavor (electron, muon or tau) that is later measured to have a different flavor. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
+\section{Neutrino Oscillations}\label{section:oscillations}
+Neutrino oscillation was first predicted by Bruno Pontecorvo \cite{pontecorvo}. It describes the phenomenon of a neutrino created with a specific lepton flavor (electron, muon or tau) that is later measured to have a different flavor. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. 
 
 \subsection{Two Flavor Neutrino Oscillation Formulation}
 The flavor eigenstates can oscillate between each other because they are composed of an add mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavor eigenstates rotated by an angle $\theta$ which is the mixing angle. 
@@ -271,8 +271,59 @@ $\delta_{cp}$ & unknown\\
 \end{table}
 
 \section{Neutrino Interactions}
+As stated previously, neutrinos interact via the weak force, because of this, we don't directly see the path of the neutrino through a detector. It is important to understand neutrino interactions, and hence cross-sectionsk before precision measurements of neutrino oscillations can be determined. 
 \subsection{Weak Interactions}
+The weak force has two forms, charged-current (CC) interactions which are mediated by the $W^{\pm}$ boson, and neutral-curren (NC) which are mediated by the $Z^0$ boson. These bosons are very heavy \cite{griffiths}. Their masses have been measured to be \ref{eq:masses}.
+\begin{equation}
+M_w = 82 \pm 2 GeV/c^2,	M_z = 92 \pm 2 Gev/c^2
+\label{eq:masses}
+\end{equation}
+The currents for CC and NC interactions are shown in \ref{eq:currents}
+\begin{equation}
+j^{\pm}_{\mu} = \overline{u}\frac{-ig_{W}}{2\sqrt(2)}(\gamma^{\mu}-\gamma^{\mu}\gamma^{5})u
+j^{0}_{\mu} = \overline{u}\frac{-ig_{z}}{2}(g_v\gamma^{\mu}-g_A\gamma^{\mu}\gamma^{5})u
+\label{eq:currents}
+\end{equation}
+where:
+\begin{conditions}
+u 	\& 	\overline{u} & Dirac spinors\\
+\gamma^{\mu} & four Dirac gamma matrices\\ 
+\gamma^5,	g_W 	\& 	g_Z & coupling strengths\\
+\end{conditions}
+
+Rewriting the current equation to \ref{eq:chiralcurrent} shows the weak force's chiral nature. Chirality is a property of the particle spinors. It is Lorentz invariant but not constant in time. Chiral Eigenstates are either left or right-handed and are defined by the chirality operator $\gamma^5$ with eigenvalues -1 for left-handed or +1 for right-handed. Particle spinors are generally composed of both chiral components. 
+\begin{equation}
+j^{\pm}_{\mu} = \overline{u}\frac{-ig_{W}}{2\sqrt(2)}\gamma^{\mu}(1\pm\gamma^{5})u
+\label{eq:chiralcurrent}
+\end{equation}
+
+Expanding the negative \ref{eq:chiralcurrent} using the chiral projection operators we get \ref{eq:chiralexpanded}. Written this way, it can be seen that CC weak interactions are vector currents that interact only with the left-handed chiral component of a particle, or right-handed chiral component of an anti-particle. 
+\begin{equation}
+j^{-}_{\mu} = \frac{-ig_{W}}{2\sqrt(2)}\overline{u}(1+\gamma^{5})\gamma^{\mu}(1-\gamma^{5})u = \frac{-ig_{W}}{2\sqrt(2)}\overline{u_L}\gamma^{\mu}u_L
+\label{eq:chiralexpanded}
+\end{equation}
+The same conclusion arises with the NC weak interactions. Due to neutrinos only being created via the weak force, neutrinos then are always created in the left-handed chiral eigenstate. Even though neutrinos are only created in a left-handed chiral state, they will gradually evolve a right-handed chiral component. 
+
 \subsection{Neutrino-Nucleon Interactions}
+The four momentum transferred between the neutrino/lepton system and the target is denoted as q. The square of this transfer, $Q^2$ is Lorentz invariant. Small $Q^2$ are dominated by elastic interactions and are when the struck nucleon recoils from the interaction without breaking. In the CC case, there is also a change of charge. Because of the transfer of mass to the final state lepton, CC interactions are more correctly called quasi-elastic (QE). For the NC case, all neutrinos and anti-neutrinos can scatter off both neutrons and protons and is referred to as NC-elastic scattering. At high $Q^2$, it becomes unlikely for the nucleon to remain intact, therefore the CCQE cross-section becomes negligible. 
+
+CCQE interactions allow for the kinematics to be completely reconstructed because of the two-body interaction and therefore the initial neutrino energy can be determined. As discussed in section \ref{section:oscillations}, accurately determining the initial neutrino energy is critical for measuring the oscillation parameters. 
+
+For inelastic interactions, low $Q^2$ are dominated by resonance (RES) productions. A resonant interaction is when a nucleon is excited into a baryonic resonance before decaying. Understanding CCRES is important for neutrino oscillation experiments searching for $\nu_e$ because a CCRES interaction producing a $\pi^0\rightarrow2\gamma$ can mimic an electron. 
+
+At high $Q^2$, the inelastic interactions are dominated by deep inelastic scattering (DIS). DIS is when the neutrino scatters off of a quark inside the nucleon, breaking the original nucleon. At energies below 1 GeV, CCQE interactions dominate, however there is a rapidly varying transition region where there are fractions of each channel. Figure \ref{fig:xsec_zellar} \cite{zellar} shows the neutrino cross section as a function of energy for the different CC interactions. 
+
+At low neutrino energies, a neutrino can undergo NC coherent (COH) scattering. Coherent scattering occurs when the nucleus recoils as a whole and is left in the same state as when the neutrino arrived. NCCOH scattering results in a slight recoil of the struck nucleus. At higher neutrino energies, both CC and NC COH scattering is possible which then results in an additional final state particle suck as a $\pi$, $\rho$ or K meson. The four-momentum transfer to the nucleus needs to be kept small in COH scattering and this strongly constrains the kinematics. The final state lepton and particles created are created at small scattering angles relative to the incoming neutrino. This constraint also results in a small COH cross-section. 
+
+Although the COH cross-sections are low, coherent pion production is also important to understand for oscillation experiments searching for $\nu_e$ due to the two photons that decay from an NCCOH $\pi^0$ production mimicking an electron, similar to a RES $\pi^0$. 
+\begin{figure}[htp]
+\centering
+\includegraphics[scale=.55]{figs/cc_inclusive_nu.png}
+\captionof{figure}{Total neutrino per nucleon CC cross sections divided by neutrino energy and plotted as a function of energy. Predictions for the processes are by the NUANCE generator. \cite{zellar}}
+\label{fig:xsec_zellar}
+\end{figure}
+
+
 %\subsection{Reactor Oscillation}
 %Many experiments have searched for oscillation of electron anti-neutrinos produced at nuclear reactors. Such oscillations give the value of the parameter $\theta_{13}$. The KamLAND experiment, started in 2002, has made a high precision observation of reactor neutrino oscillation. Neutrinos produced in nuclear reactors have energies similar to solar neutrinos, a few MeV. The baselines of these experiments have ranged from tens of meters to over 100 km. On 8 March 2012, the Daya Bay team announced a 5.2$\sigma$ discovery that $\theta_{13}\neq 0$. %Two other experiments are currently measuring reactor neutrino oscillation (at the same baseline of a few kilometers) and may eventually confirm the Daya Bay results: Double Chooz and RENO.
 
