--- a/preamble.tex
+++ b/preamble.tex
@@ -90,7 +90,7 @@
 \usepackage{ifthen}
 
 \newboolean{isdraft}
-\setboolean{isdraft}{true} % change to false when final version is ready
+\setboolean{isdraft}{false} % change to false when final version is ready
 
 \usepackage{adjustbox} % for clipping seal images in xelatex
 \usepackage{rotating} % for sidewaysfigure
