--- a/example.tex
+++ b/example.tex
@@ -4,7 +4,7 @@
 
 %% For short draft builds (breaks citations by necessity)
 %\documentclass[hyperpdf,nobind,draft,hidefrontback]{hepthesis}
-\documentclass[hyperpdf,bindnopdf,usenames,dvipsnames,svgnames,table]{hepthesis}
+\documentclass[hyperpdf,bindnopdf,usenames,dvipsnames,svgnames,table,longbibliography]{hepthesis}
 
 %%For Cambridge soft-bound version \documentclass[hyperpdf,bindnopdf,usenames,dvipsnames,svgnames,table]{hepthesis}
 %% For Cambridge hard-bound version (must be one-sided)
@@ -20,7 +20,9 @@
 \usepackage{subcaption}
 \usepackage{caption}
 \usepackage{verbatim}
-\linenumbers
+%---------------Add line numbers--------------%
+%\linenumbers
+%---------------Add line numbers--------------%
 
 %% Put package includes etc. into preamble.tex for convenience
 \input{preamble}
@@ -28,6 +30,11 @@
 \usepackage{floatrow}
 % Table float box with bottom caption, box width adjusted to content
 \newfloatcommand{capbtabbox}{table}[][\FBwidth]
+\usepackage{array}
+
+\newenvironment{conditions}
+  {\par\vspace{\abovedisplayskip}\noindent\begin{tabular}{>{$}l<{$} @{${}={}$} l}}
+  {\end{tabular}\par\vspace{\belowdisplayskip}}
 
 \newcommand{\mc}[2]{\multicolumn{#1}{c}{#2}}
 \definecolor{Gray}{gray}{0.85}
@@ -79,16 +86,17 @@ San Antonio, TX, USA 2011\\
 Submitted in partial fulfillment\\
 of the requirements for the degree\\
 \emph{Doctor of Philosophy in Physics}\\
+
 \ifthenelse{\boolean{isdraft}}{
 \vspace{1.5cm}
 - * - \tracked{DRAFT \today}~- * -\\[0.5cm]
-}{
+}
+{
 \vspace{1.5cm}
 }
-December, 2017\\
-Syracuse University\\
-Syracuse, New York
-%SYRACUSE UNIVERSITY MMXIII
+February, 2018\\
+SYRACUSE UNIVERSITY\\ 
+Syracuse, New York\\
 
 \end{center}
 %\setcounter{page}{2}
@@ -97,7 +105,7 @@ Syracuse, New York
 
 \vspace*{5cm}
 \begin{center}
-    Copyright 2017\\
+    Copyright 2018\\
     Jessica Nicole Esquivel\\
     All Rights Reserved\\
     Syracuse University\\
